# tai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  pyproject.toml
ad-hoc/: avg_sessions_per_player.py  avg_time_between_sessions_daily.py  cohort_sizes.py  median_account_age_per_month.py  optimize_model_v2.py  player_cohort_distribution.py  player_name_segmentation.py  tagging_report.py  user_retention.py  yearly_name_segmentation.py
src/tai/: __init__.py  __main__.py  logging.py  samp.py  settings.py  telegram_utils.py
src/tai/collection/: __init__.py  online.py  players.py  sessions.py  worlds.py
src/tai/database/: __init__.py  connector.py  initialize.py  schema.sql  schema_online.sql  schema_players.sql  schema_sessions.sql  schema_world_sessions.sql  schema_worlds_online.sql
src/tai/reports/: digest.py
src/tai/world_tagging/: __init__.py  dsl.py  rules.py  solver.py  utils.py
